<resources>
    <string name="app_name">iCoFound</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="google_maps_keys">AIzaSyC_r4lqApvBS2zBOB4doAejTXz6ptQjG1c</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="close">Close</string>
    <string name="update">New Version available on Playstore \n Please Update Your App</string>
    <string name="gotochat">GoToChat</string>
    <string name="filter">Filter</string>
    <string name="search">Search</string>
    <string name="_0">0</string>
</resources>